force-app/main/default/objects/Pharma__c/Pharma__c.object-meta.xml
<CustomObject>
    <label>Pharma Products</label>
    <nameField>
        <label>Pharma Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pharma Productss</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>