force-app/main/default/objects/Pharma__c/fields/Is_Prescription_Drug__c.field-meta.xml
<CustomField>
    <fullName>Is_Prescription_Drug__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Prescription Drug</label>
    <type>Checkbox</type>
</CustomField>