force-app/main/default/objects/Pharma__c/fields/Manufacturer_Name__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer_Name__c</fullName>
    <description>Name of the Manufacturer.</description>
    <label>Manufacturer Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>