force-app/main/default/objects/Pharma__c/fields/Manufacturing_date__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_date__c</fullName>
    <label>Manufacturing date</label>
    <type>Date</type>
</CustomField>