force-app/main/default/objects/Pharma__c/fields/Quantity_in_Stock__c.field-meta.xml
<CustomField>
    <fullName>Quantity_in_Stock__c</fullName>
    <label>Quantity in Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>