force-app/main/default/objects/Pharma__c/fields/Work_Type__c.field-meta.xml
<CustomField>
    <fullName>Work_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Type</label>
    <referenceTo>WorkType</referenceTo>
    <relationshipName>Pharmas</relationshipName>
    <type>Lookup</type>
</CustomField>